--- a/bookStore/src/main/resources/application.properties
+++ b/bookStore/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=1001
 spring.datasource.name=book
-spring.datasource.url=jdbc:mysql://localhost:3306/book?ServerTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://database-1.c5kme0iu0ot3.ap-southeast-1.rds.amazonaws.com:3306/book?ServerTimezone=UTC
+spring.datasource.username=subbareddy
+spring.datasource.password=subbareddy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
