--- a/bookstore-billing-service/src/main/resources/application.yml
+++ b/bookstore-billing-service/src/main/resources/application.yml
@@ -56,8 +56,8 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:bookstore_db;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+    username: test
+    password: test
   h2:
     console:
       enabled: true
@@ -86,8 +86,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/bookstore_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: bookstoreDBA
-    password: PaSSworD
+    username: root
+    password: 12345
 
 ---
 
@@ -110,5 +110,5 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://bookstore-mysql-db:3306/bookstore_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: bookstoreDBA
-    password: PaSSworD
+    username: root
+    password: 12345
