--- a/bookstore-order-service/src/main/resources/application.yml
+++ b/bookstore-order-service/src/main/resources/application.yml
@@ -84,8 +84,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/bookstore_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: bookstoreDBA
-    password: PaSSworD
+    username: root
+    password: 12345
 
 ---
 
@@ -108,5 +108,5 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://bookstore-mysql-db:3306/bookstore_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: bookstoreDBA
-    password: PaSSworD
+    username: root
+    password: 12345
